# smartsense-ai-for-bharat-hackathon

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env  .env.example  Dockerfile  entrypoint.sh  main.py  pyproject.toml  vendor_bulk_upload_template.csv
backend/app/api/routers/: activities.py  auth.py  documents.py  email.py  projects.py  quotes.py  rfp.py  search.py  stats.py  translation.py  vendors.py
backend/app/core/: config.py  database.py
backend/app/models/: domain.py
backend/app/schemas/: auth.py  documents.py  domain.py  email.py  rfp.py  search.py  vendors.py
backend/app/services/: activity.py  auth.py  documents.py  email.py  quotes.py  rfp.py  search.py  translation.py  vendors.py
backend/migrations/: env.py
backend/migrations/versions/: 187d5a4fbf91_add_search_history_table.py  231f84ca83ec_initial.py  28efc5582535_merge_project_and_rfp_tables_and_add_.py  40a3e79f7305_add_project_rfp_deadline_timeline_.py  626178472c0a_add_negotiated_price.py  68e395a9695b_merge_project_and_rfp_tables_and_add_.py  797a06e88349_add_ai_recommendations_to_project.py  9d92dc8244be_add_activities_table.py  a1b2c3d4e5f6_add_rfp_expiry_column_to_projects.py  a2c4e6f8b1d3_add_vendor_onboarding_fields.py  b2c3d4e5f6a7_add_project_invited_vendors_table.py  c3f9a1b2e4d7_add_unique_constraint_to_vendor_name.py  d554ef8702e6_add_vendor_documents_table.py  e2a1b3c4d5f6_add_company_logo_url_to_users.py  e660f3dbeda8_add_quote_extraction_fields.py  f3b2a1c4d5e7_add_full_name_and_pwd_changed_at.py
(+36 files in other folders)
