[project]
name = "procure-ai-backend"
version = "0.1.0"
description = "Backend API for Procure AI RFP Handling and Vendor Management"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.27",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "exa-py>=1.0.8",
    "python-dotenv>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "alembic>=1.13.0",
    "opensearch-py>=2.4.0",
    "requests-aws4auth>=1.2.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = []
